--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,8 @@ img {
 }
 
 .categories.container {
-  width: 1130px;
+  width: 1120px;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
   background-color: #ffffff;
 }
 
@@ -54,27 +52,31 @@ img {
 }
 
 .categories.list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px;
+  /* display: flex;
   flex-wrap: wrap;
-  margin-right: -32px;
+  margin-right: -32px; */
 }
 
 .categories.item {
-  flex-basis: calc((100% / 4 - 32px));
-  margin-right: 32px;
+  /* flex-basis: calc((100% / 4 - 32px));
+  margin-right: 32px; */
   border: 1px solid #d9d9de;
-  box-sizing: border-box;
   border-radius: 6px;
+  overflow: hidden;
 }
 
-.categories.item:not(:nth-last-child(-n + 4)) {
+/* .categories.item:not(:nth-last-child(-n + 4)) {
   margin-bottom: 32px;
-}
+} */
 
 .categories.title {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  font-size: 1.19;
+  font-size: 16px;
+  line-height: 1.19;
   display: flex;
   align-items: center;
   height: 48px;
@@ -89,11 +91,8 @@ img {
 }
 
 .footer.container {
-  width: 1130px;
+  width: 1120px;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
-  /* background-color: #fff; */
 }
 
 .footer.upper {
